--- a/style.css
+++ b/style.css
@@ -9,4 +9,45 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #000;
+}
+
+.download-btn {
+  display: flex;
+  align-items: center;
+  border: none;
+  color: #fff;
+  border-radius: 6px;
+  padding: 16px 25px;
+  background-color: #4a98f7;
+  box-shadow: 0 5px 10px rgba(255, 255, 255, 0.1);
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.download-btn:hover {
+  background-color: #2382f6;
+}
+
+.download-btn .icon {
+  font-size: 1.5rem;
+}
+
+.download-btn .text {
+  font-size: 1.6rem;
+  padding-left: 15px;
+}
+
+.download-btn.timer {
+  color: #000;
+  background: none;
+  box-shadow: none;
+  font-size: 1.6rem;
+  pointer-events: none;
+  transition: none;
+}
+
+.download-btn.timer b {
+  color: #4a98f7;
+  padding: 0 8px;
 }
